@@ -19,6 +19,7 @@
 package co.rsk.peg.utils;
 
 import co.rsk.bitcoinj.core.*;
+import co.rsk.core.RskAddress;
 import co.rsk.peg.constants.BridgeConstants;
 import co.rsk.peg.Bridge;
 import co.rsk.peg.DeprecatedMethodCallException;
@@ -28,8 +29,6 @@ import co.rsk.peg.federation.constants.FederationConstants;
 import org.ethereum.config.blockchain.upgrades.ActivationConfig;
 import org.ethereum.config.blockchain.upgrades.ConsensusRule;
 import org.ethereum.core.Block;
-import org.ethereum.core.SignatureCache;
-import org.ethereum.core.Transaction;
 import org.ethereum.util.RLP;
 import org.ethereum.vm.DataWord;
 import org.ethereum.vm.LogInfo;
@@ -38,7 +37,6 @@ import org.ethereum.vm.PrecompiledContracts;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Responsible for logging events triggered by BridgeContract in RLP format.
@@ -53,32 +51,25 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
 
     private final BridgeConstants bridgeConstants;
     private final ActivationConfig.ForBlock activations;
-    private final SignatureCache signatureCache;
     private final List<LogInfo> logs;
 
-    public BrigeEventLoggerLegacyImpl(
-        BridgeConstants bridgeConstants,
-        ActivationConfig.ForBlock activations,
-        List<LogInfo> logs,
-        SignatureCache signatureCache
-    ) {
+    public BrigeEventLoggerLegacyImpl(BridgeConstants bridgeConstants, ActivationConfig.ForBlock activations, List<LogInfo> logs) {
         this.bridgeConstants = bridgeConstants;
         this.activations = activations;
-        this.signatureCache = signatureCache;
         this.logs = logs;
     }
 
     @Override
-    public void logUpdateCollections(Transaction rskTx) {
+    public void logUpdateCollections(RskAddress sender) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logUpdateCollections method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logUpdateCollections method after RSKIP146 activation"
             );
         }
         this.logs.add(
             new LogInfo(BRIDGE_CONTRACT_ADDRESS,
                 Collections.singletonList(Bridge.UPDATE_COLLECTIONS_TOPIC),
-                RLP.encodeElement(rskTx.getSender(signatureCache).getBytes())
+                RLP.encodeElement(sender.getBytes())
             )
         );
     }
@@ -87,7 +78,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logAddSignature(FederationMember federationMember, BtcTransaction btcTx, byte[] rskTxHash) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logAddSignature method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logAddSignature method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.ADD_SIGNATURE_TOPIC);
@@ -102,7 +93,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logReleaseBtc(BtcTransaction btcTx, byte[] rskTxHash) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logReleaseBtc method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logReleaseBtc method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.RELEASE_BTC_TOPIC);
@@ -115,7 +106,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     public void logCommitFederation(Block executionBlock, Federation oldFederation, Federation newFederation) {
         if (activations.isActive(ConsensusRule.RSKIP146)) {
             throw new DeprecatedMethodCallException(
-                "Calling BrigeEventLoggerLegacyImpl.logCommitFederation method after RSKIP146 activation"
+                "Calling BridgeEventLoggerLegacyImpl.logCommitFederation method after RSKIP146 activation"
             );
         }
         List<DataWord> topics = Collections.singletonList(Bridge.COMMIT_FEDERATION_TOPIC);
@@ -134,6 +125,13 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
         this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, topics, data));
     }
 
+    @Override
+    public void logCommitFederationFailure(Block executionBlock, Federation proposedFederation) {
+        throw new UnsupportedOperationException(
+            "Calling BridgeEventLoggerLegacyImpl.logCommitFederationFailure is not allowed, since this event was created after deprecating the class."
+        );
+    }
+
     private byte[] flatKeysAsRlpCollection(List<BtcECKey> keys) {
         return flatKeys(keys, (k -> RLP.encodeElement(k.getPubKey())));
     }
@@ -141,7 +139,7 @@ public class BrigeEventLoggerLegacyImpl implements BridgeEventLogger {
     private byte[] flatKeys(List<BtcECKey> keys, Function<BtcECKey, byte[]> parser) {
         List<byte[]> pubKeys = keys.stream()
             .map(parser)
-            .collect(Collectors.toList());
+            .toList();
         int pubKeysLength = pubKeys.stream().mapToInt(key -> key.length).sum();
 
         byte[] flatPubKeys = new byte[pubKeysLength];
